# synopsis

./: CLAUDE.md  Makefile  index.html  package-lock.json  package.json  vite.config.ts
spec/: architecture.md  delta-tab.md  details-tab.md  diagrams-tab.md  overview.md  summary-tab.md  tests-tab.md
src/: App.css  App.tsx  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: git.rs  json_utils.rs  lib.rs  main.rs  prompts.rs  symbol_finder.rs  test_parser.rs
src-tauri/src/git/: claude.rs  delta.rs  details.rs  diagrams.rs  mod.rs  summary.rs  tests_cmd.rs  types.rs
src/components/: DefinitionPopover.tsx  DefinitionView.tsx  DeltaTab.test.tsx  DeltaTab.tsx  DetailsTab.test.tsx  DetailsTab.tsx  DiagramsTab.tsx  DiffModal.test.tsx  DiffModal.tsx  FolderPicker.test.tsx  FolderPicker.tsx  HighlightedLine.test.tsx  HighlightedLine.tsx  SnippetBlock.tsx  SnippetModal.tsx  SummaryTab.test.tsx  SummaryTab.tsx  TabBar.test.tsx  TabBar.tsx  TestsTab.test.tsx  TestsTab.tsx  ThinkingSpinner.tsx
src/contexts/: RepoContext.tsx
src/hooks/: useHighlighter.ts  useRepo.ts
src/lib/: diffStyles.test.ts  diffStyles.ts  highlight.ts
src/test/: mocks.ts  setup.ts
