[package]
name = "synopsis"
version = "0.1.0"
description = "A git branch inspector"
authors = []
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "synopsis_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "synopsis"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
